--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ service:
   - docker
 
 env:
-  - GO111MODULE=on GOPROXY=https://proxy.golang.org
-  - REG_TOKEN=$GITHUB_TOKEN
+  - GO111MODULE=on GOPROXY=https://proxy.golang.org REG_TOKEN=$GITHUB_TOKEN
 
 matrix:
   fast_finish: true
